--- a/study_web_admin/src/main/resources/application.yml
+++ b/study_web_admin/src/main/resources/application.yml
@@ -18,6 +18,11 @@ spring:
       name: study
     expiretime: 3600000
 
+  servlet:
+    multipart:
+      max-file-size: 200Mb
+      max-request-size: 200Mb
+
   #redis 用户session共享
   redis:
     database: 0
