--- a/study_web_user/src/main/resources/application.yml
+++ b/study_web_user/src/main/resources/application.yml
@@ -10,6 +10,10 @@ spring:
     key:
       name: study
     expiretime: 3600000
+  servlet:
+    multipart:
+      max-file-size: 200Mb
+      max-request-size: 200Mb
 
   #zipkin:
   #    base-url: http://localhost:9411
