--- a/study_zuul_admin/src/main/resources/application.yml
+++ b/study_zuul_admin/src/main/resources/application.yml
@@ -14,6 +14,10 @@ spring:
     key:
       name: study
     expiretime: 3600000
+  servlet:
+    multipart:
+      max-file-size: 200Mb
+      max-request-size: 200Mb
 
 eureka:
   instance:
